Enhance Java update documentation with recent features and improvements
- Updated Java 21 section to highlight the introduction of Virtual Threads, String Templates, and advanced Pattern Matching.
- Finalized the Foreign Function & Memory API, emphasizing its significance for native interoperability.
- Included detailed examples and explanations for new features, ensuring clarity for developers.
- Improved overall structure and consistency across Java version updates, aligning with recent changes in the language.